# komodo-defi-framework

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: komodefi-cli.yml
examples/sse/: index.html
examples/wasm/: README.md
mm2src/adex_cli/: Cargo.toml
mm2src/adex_cli/src/: adex_app.rs  adex_config.rs  cli.rs  helpers.rs  komodefi_app.rs  komodefi_config.rs  log.rs  logging.rs  main.rs  rpc_data.rs  transport.rs
mm2src/adex_cli/src/activation_scheme_db/: activation_scheme_impl.rs  init_activation_scheme.rs  mod.rs
mm2src/adex_cli/src/adex_proc/: adex_proc.rs  adex_proc_impl.rs  command.rs  mod.rs  response_handler.rs  smart_fraction_fmt.rs
mm2src/adex_cli/src/adex_proc/response_handler/: activation.rs  active_swaps.rs  best_orders.rs  formatters.rs  macros.rs  mod.rs  my_orders.rs  network.rs  order_status.rs  orderbook.rs  orderbook_depth.rs  orders_history.rs  smart_fraction_fmt.rs  swaps.rs  test_formatters.rs  trading.rs  utility.rs  wallet.rs
mm2src/adex_cli/src/adex_proc/response_handler/formatters/: mod.rs  test_formatters.rs
mm2src/adex_cli/src/cli_args/: cmd_balance.rs  cmd_best_orders.rs  cmd_cancel.rs  cmd_order_status.rs  cmd_orderbook.rs  cmd_orderbook_depth.rs  cmd_orders_history.rs  cmd_set_price.rs  cmd_update_maker_order.rs  mod.rs
mm2src/adex_cli/src/cli_cmd_args/: cmd_balance.rs  cmd_best_orders.rs  cmd_buy_sell.rs  cmd_cancel.rs  cmd_enable.rs  cmd_my_balance.rs  cmd_order_status.rs  cmd_orderbook.rs  cmd_orderbook_depth.rs  cmd_orders_history.rs  cmd_sell_buy.rs  cmd_set_config.rs  cmd_set_price.rs  cmd_swap.rs  cmd_task.rs  cmd_trade_preimage.rs  cmd_update_maker_order.rs  commands_cancel.rs  commands_coin.rs  commands_mm2.rs  commands_network.rs  commands_order.rs  commands_pubkeys.rs  commands_swap.rs  commands_utility.rs  commands_wallet.rs  mod.rs
mm2src/adex_cli/src/cli_cmd_args/commands_order/: cmd_best_orders.rs  cmd_orderbook_depth.rs  cmd_orders_history.rs
mm2src/adex_cli/src/doc/: CLI_REFERENCE.md
mm2src/adex_cli/src/komodefi_proc/: command.rs  komodefi_proc_impl.rs  mod.rs  response_handler.rs
mm2src/adex_cli/src/komodefi_proc/response_handler/: activation.rs  formatters.rs  macros.rs  my_orders.rs  order_status.rs  orderbook.rs  orderbook_depth.rs  orders_history.rs  swaps.rs  trading.rs  utility.rs  version_stat.rs  wallet.rs
mm2src/adex_cli/src/komodefi_proc/response_handler/activation/: bch.rs  tendermint.rs  z_coin.rs
mm2src/adex_cli/src/rpc_data/: activation.rs  message_signing.rs  mod.rs  swaps.rs  trade_preimage.rs  trading.rs  utility.rs  wallet.rs
mm2src/adex_cli/src/rpc_data/activation/: bch.rs  electrum.rs  enable.rs  eth.rs  tendermint.rs  zcoin.rs
mm2src/adex_cli/src/scenarios/: init_coins.rs  init_mm2_cfg.rs  inquire_extentions.rs  mm2_proc_mng.rs  mod.rs
mm2src/adex_cli/src/tests/: best_orders.http  mod.rs  my_orders.http  orderbook_depth.http  taker_status.http
mm2src/adex_cli/src/tests/http_mock_data/: history-makers-detailed.http
mm2src/coins/: Cargo.toml  coin_balance.rs  coin_balance_event.rs  coin_errors.rs  eth.rs  events.rs  hd_confirm_address.rs  hd_pubkey.rs  hd_wallet.rs  lightning.rs  lp_coins.rs  lp_price.rs  my_tx_history_v2.rs  nft.rs  qrc20.rs  solana.rs  test_coin.rs  utxo.rs  watcher_common.rs  z_coin.rs
mm2src/coins/eth/: eth_hd_wallet.rs  eth_tests.rs  eth_wasm_tests.rs  eth_withdraw.rs  v2_activation.rs
mm2src/coins/hd_wallet/: account_ops.rs  address_ops.rs  coin_ops.rs  confirm_address.rs  errors.rs  hd_coin_ops.rs  hd_pubkey.rs  mod.rs  pubkey.rs  wallet_ops.rs  withdraw_ops.rs
mm2src/coins/hd_wallet_storage/: mock_storage.rs  mod.rs  sqlite_storage.rs  wasm_storage.rs
mm2src/coins/lightning/: ln_conf.rs  ln_db.rs  ln_errors.rs  ln_events.rs  ln_filesystem_persister.rs  ln_p2p.rs  ln_platform.rs  ln_serialization.rs  ln_sql.rs  ln_storage.rs  ln_utils.rs
mm2src/coins/nft/: nft_errors.rs  nft_structs.rs  nft_tests.rs
mm2src/coins/nft_storage/: mod.rs  sql_storage.rs  wasm_storage.rs
mm2src/coins/qrc20/: history.rs  qrc20_tests.rs  rpc_clients.rs  script_pubkey.rs  swap.rs
mm2src/coins/rpc_command/: account_balance.rs  get_current_mtp.rs  get_enabled_coins.rs  get_new_address.rs  hd_account_balance_rpc_error.rs  init_account_balance.rs  init_create_account.rs  init_scan_for_new_addresses.rs  init_withdraw.rs
mm2src/coins/solana/: solana_common.rs  solana_common_tests.rs  solana_decode_tx_helpers.rs  solana_tests.rs  spl.rs  spl_tests.rs
mm2src/common/: Cargo.toml  bool_as_int.rs  build.rs  common.rs  crash_reports.rs  io.rs  jsonrpc_client.rs  log.rs  seri.rs  time_cache.rs  wasm.rs  wio.rs
mm2src/crypto/: Cargo.toml
mm2src/db_common/: Cargo.toml
mm2src/gossipsub/: Cargo.toml
mm2src/komodefi_cli/: Cargo.toml
mm2src/mm2_bin_lib/: Cargo.toml  build.rs
mm2src/mm2_core/: Cargo.toml
mm2src/mm2_db/: Cargo.toml
mm2src/mm2_err_handle/: Cargo.toml
mm2src/mm2_event_stream/: Cargo.toml
mm2src/mm2_event_stream/src/: behaviour.rs  controller.rs  lib.rs
mm2src/mm2_libp2p/: Cargo.toml
mm2src/mm2_libp2p/src/: adex_ping.rs  atomicdex_behaviour.rs  lib.rs  network.rs  peers_exchange.rs  request_response.rs  runtime.rs
mm2src/mm2_libp2p/src/atomicdex_behaviour/: tests.rs
mm2src/mm2_main/: Cargo.toml
mm2src/mm2_net/: Cargo.toml
mm2src/mm2_net/src/: grpc_web.rs  ip_addr.rs  lib.rs  native_http.rs  network_event.rs  p2p.rs  sse_handler.rs  transport.rs  wasm_http.rs  wasm_ws.rs
mm2src/mm2_net/src/native_tls/: acceptor.rs  builder.rs
mm2src/mm2_net/src/wasm/: body_stream.rs  http.rs  mod.rs  tonic_client.rs  wasm_http.rs
mm2src/mm2_p2p/: Cargo.toml
mm2src/mm2_rpc/: Cargo.toml
mm2src/mm2_rpc/skip_serializing_none/src/: lib.rs
mm2src/mm2_rpc/src/: legacy.rs  lib.rs  mm_protocol.rs  wasm_rpc.rs
mm2src/mm2_rpc/src/data/: legacy.rs  version2.rs
mm2src/mm2_rpc/src/data/legacy/: activation.rs  orders.rs  swaps.rs  utility.rs  wallet.rs
mm2src/mm2_rpc/src/data/version2/: wallet.rs
mm2src/mm2_rpc_data/: Cargo.toml
mm2src/mm2_rpc_data/src/: legacy.rs  lib.rs  version2.rs
mm2src/trezor/: Cargo.toml
(+453 files in other folders)
