[package]
name = "mm2_event_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12"
serde = { version = "1", features = ["derive", "rc"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "time", "rt"] }
