[package]
name = "mm2-libp2p"
version = "0.1.0"
authors = ["Artem Pikulin <ortgma@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
async-trait = "0.1"
libp2p-gossipsub = { git = "https://github.com/libp2p/rust-libp2p.git", branch = "master" }
common = { path = "../common" }
derive_more = "0.99"
libp2p-floodsub = { git = "https://github.com/libp2p/rust-libp2p.git", branch = "master", default-features = false }
futures = { version = "0.3.1", package = "futures", features = ["compat", "async-await"] }
futures-rustls = { version = "0.21.1" }
hex = "0.4.2"
lazy_static = "1.4"
secp256k1 = { version = "0.20", features = ["rand"] }
log = "0.4"
rand = { package = "rand", version = "0.7", features = ["std", "wasm-bindgen"] }
regex = "1"
rmp-serde = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
sha2 = "0.9"
void = "1.0"
wasm-timer = "0.2.4"
pin-project = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", branch = "master", default-features = false, features = ["dns", "floodsub", "noise", "ping", "request-response", "secp256k1", "tcp", "tokio", "websocket"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", branch = "master", default-features = false, features = ["floodsub", "noise", "ping", "request-response", "secp256k1", "wasm-ext", "wasm-ext-websocket"] }
wasm-bindgen-futures = "0.4.21"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["unstable"] }
env_logger = "0.9.3"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
