[package]
name = "mm2_net"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
async-trait = "0.1"
bytes = "1.1"
cfg-if = "1.0"
derive_more = "0.99"
common = { path = "../common" }
ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git" }
futures = { version = "0.3", package = "futures", features = ["compat", "async-await", "thread-pool"] }
http = "0.2"
lazy_static = "1.4"
mm2_err_handle = { path = "../mm2_err_handle" }
mm2_core = { path = "../mm2_core" }
prost = "0.10"
rand = { version = "0.7", features = ["std", "small_rng", "wasm-bindgen"] }
serde = "1"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
thiserror = "1.0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.21.2"
byteorder = "1.3"
futures-util = "0.3"
gstuff = { version = "0.7", features = ["nightly"] }
http-body = "0.4"
httparse = "1.8.0"
js-sys = "0.3.27"
pin-project = "1.0.10"
tower-service = "0.3"
wasm-bindgen = "0.2.86"
wasm-bindgen-test = { version = "0.3.2" }
wasm-bindgen-futures = "0.4.21"
web-sys = { version = "0.3.55", features = ["console", "CloseEvent", "DomException", "ErrorEvent", "IdbDatabase",
    "IdbCursor", "IdbCursorWithValue", "IdbFactory", "IdbIndex", "IdbIndexParameters", "IdbObjectStore", "IdbObjectStoreParameters", "IdbOpenDbRequest", "IdbKeyRange", "IdbTransaction", "IdbTransactionMode", "IdbVersionChangeEvent", "MessageEvent","ReadableStream", "WebSocket"] }
wasm-streams = "0.3.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { version = "0.3" }
hyper = { version = "0.14.26", features = ["client", "http2", "server", "tcp"] }
gstuff = { version = "0.7", features = ["nightly"] }
rustls = { version = "0.20", default-features = false }
tokio = { version = "1.20" }
tokio-rustls = { version = "0.23", default-features = false }
