[package]
name = "mm2_rpc_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
derive_more = "0.99"
mm2_number = { path = "../mm2_number" }
rpc = { path = "../mm2_bitcoin/rpc" }
serde = "1"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
uuid = { version = "1.2.2", features = ["fast-rng", "serde", "v4"] }

[lib]
doctest = false
